# SmartPhone-Brand-Classification

./: .replit  README.md  create_dataset_archive.py  dataset_creator.py  image_processor.py  logger.py  main.py  ml_model.py  organize_dataset.py  pyproject.toml  utils.py
data/: download_checkpoint.json
organized_dataset/: README.md  dataset_metadata.json  dataset_stats.json
